# waku-ai

./: .gitignore  LICENSE  MULTITENANT_PLAN.md  README.md  docker-compose.yml  pyproject.toml
ai/: .env.example  Dockerfile  ai_service.py  config.py  conversation.py  embeddings.py  guardrails.py  llm.py  nlu.py  pyproject.toml  requirements.txt
ai/tests/: test_booking_extract.py  test_booking_routing.py  test_close_order.py  test_contextual_order.py  test_embeddings.py  test_llm_provider_routing.py  test_match_image.py  test_order_correction.py  test_order_extract_unit_price.py  test_order_intent_parity.py
backend/: .env.example  Dockerfile  auth.py  crypto.py  database.py  main.py  models.py  privacy_policy.html  pyproject.toml  requirements.txt  schemas.py  terms_of_service.html
backend/app/: main.py
backend/app/api/: constants.py
backend/app/api/routers/: auth.py  bookings.py  business.py  customers.py  media.py  orders.py  products.py  reports.py  settings.py  staff.py  webhook.py  whatsapp.py
backend/app/core/: crypto.py  database.py  ids.py  security.py
backend/app/models/: __init__.py  booking.py  business.py  customer.py  order.py  product.py  user.py
backend/app/schemas/: __init__.py  auth.py  booking.py  business.py  common.py  customer.py  order.py  product.py
backend/app/services/: booking_service.py  embeddings.py  order_service.py  payment.py  report_service.py  retrieval.py  whatsapp.py
backend/services/: booking_service.py  order_service.py  payment.py  retrieval.py  whatsapp.py
backend/tests/: conftest.py  helpers.py  test_auth.py  test_booking_persist.py  test_booking_remind.py  test_booking_service.py  test_booking_status_sync.py  test_bookings_api.py  test_business_type.py  test_customer_card.py  test_customer_stats.py  test_customers_api.py  test_inbound_image.py  test_migration.py  test_order_finalize.py  test_order_pk_migration.py  test_otp_security.py  test_payment_after_confirm.py  test_payment_config.py  test_payment_send.py  test_payment_triggers.py  test_phase_b_migration.py  test_phase_c_migration.py  test_product_embedding.py  test_qris_generate.py  test_reply_retrieval.py  test_retrieval.py  test_sales_report.py  test_staff_api.py  test_status_sync.py  test_tenant_isolation.py  test_webhook.py  test_whatsapp.py
dashboard/: .env.example  .gitignore  Dockerfile  api_client.py  app.py  index.html  nginx.conf.template  package.json  pyproject.toml  requirements.txt  streamlit.err  vite.config.ts
dashboard/.streamlit/: config.toml
dashboard/src/: App.tsx  index.css  main.tsx  (+1 more)
(+25 files in other folders)
