[project]
name = "waku-ai-service"
version = "0.1.0"
description = "Waku AI — Bahasa Indonesia LLM and NLU service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
