[project]
name = "waku-backend"
version = "0.1.0"
description = "Waku AI — FastAPI WhatsApp Cloud API backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.5",
    "aiosqlite>=0.19.0",
]
