[project]
name = "waku-backend"
version = "0.1.0"
description = "Waku AI — FastAPI WhatsApp Cloud API backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.5",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    "cryptography>=42.0.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "email-validator>=2.1.0",
    "segno>=1.6.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
